fix(security): prevent SSRF in outbound plugin requests
Validate URLs, resolved addresses, redirects, and download targets across the console, link plugin, and AI tools. Preserve only narrowly scoped internal storage access and add regression coverage for rebinding and parser edge cases.

Signed-off-by: yjlu12 <1064690083@qq.com>